# code-coverage-sonar

./: .coveragerc  .gitignore  README.md  coverage.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
code_coverage/: main.py
code_coverage/calculator/: calculate.py  rater.py
tests/: test_main.py
tests/calculate/: test_calculate.py
