[tool.poetry]
name = "code-coverage"
version = "0.1.0"
description = ""
authors = ["Radovan Zivkovic <r.zivkovic@rasa.com>"]
readme = "README.md"
packages = [{include = "code_coverage"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.1"
coverage = "^7.2.3"
ruff = "^0.0.262"
mypy = "^1.2.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
